# MSOpenGL

./: readme.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/meishe/msopengl/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FaceTrack.cpp  FaceTrack.h  log_util.h  native-lib.cpp
app/src/main/java/com/meishe/msopengl/: App.java  CaptureActivity.java  MSScreenFilter.java  MainActivity.java  Speed.java
app/src/main/java/com/meishe/msopengl/face/: Face.java  FaceTrack.java
app/src/main/java/com/meishe/msopengl/filter/: BaseFilter.java  BaseFrameFilter.java  BigEyeFilter.java  CameraFilter.java  MSScreenFilter.java
app/src/main/java/com/meishe/msopengl/helper/: BufferHelper.java  CameraHelper.java  ShaderHelper.java  TextResourceReader.java  TextureHelper.java
app/src/main/java/com/meishe/msopengl/record/: MSEGL.java  MSMediaRecorder.java
app/src/main/java/com/meishe/msopengl/render/: MSOpenGLRenderer.java
app/src/main/java/com/meishe/msopengl/utils/: AndroidOS.java  Constants.java  FileUtil.java  PathUtils.java
app/src/main/java/com/meishe/msopengl/view/: MSOpenGLSurfaceView.java  (+2 more)
app/src/main/res/layout/: activity_capture.xml  activity_main.xml
app/src/main/res/raw/: base_fragment.glsl  base_vertex.glsl  bigeye_fragment.glsl  camera_fragment.glsl  camera_vertex.glsl
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/meishe/msopengl/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
